OpenRewriteのJDK25移行レシピ適用